# feast-getting-started

./: README.md  pyproject.toml
my_project/feature_repo/: example_repo.py  test_workflow.py
my_project/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
my_project_custom/feature_repo/: example_repo.py  feature_store.yaml
my_project_custom/feature_repo/data/: driver_stats.parquet
