[tool.poetry]
name = "feast-getting-started"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "feast_getting_started"}]

[tool.poetry.dependencies]
python = "^3.10"
feast = "^0.31.1"
pandas = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
